<resources>
    <string name="app_name">UrbanHomeServices</string>
    <string name="txt_splash_welcome">Welcome to UrbanHomeServices</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="search_for_services">Search nearby stores</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_address">Shop Address</string>
    <string name="shop_rating">Shop Rating</string>
    <string name="shop_distance">Shop Distance</string>
    <string name="services_cat">services category</string>
    <string name="facebook_app_id">please add facebook id here</string>
    <string name="fb_login_protocol_scheme">please add protocol scheme</string>
    <string name="user_country">Country/Region</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_home_screen">UrbanHomeServices</string>
    <string name="enter_phone_num">Enter Phone Number</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="select_service">Select Service</string>
    <string name="btn_add_services">Save</string>
    <string name="enter_service_name">Enter name</string>
    <string name="enter_valid_phone_number">Enter Valid Phone Number</string>
    <string name="enter_valid_email_id">Enter Valid Email id</string>
    <string name="serviceproviderimg">serviceProviderImg</string>
    <string name="todo">TODO</string>
    <string name="show_address_desc">Show user address</string>
    <string name="query_address_button_desc">Choose Address</string>
    <string name="country_not_supported_identity">The Identity service is not supported in the current location</string>
    <string name="child_account_not_supported_identity">Children account do not support Identity service</string>
    <string name="current_address_text">Current address:</string>
    <string name="show_shipping_address">show shipping address</string>
    <string name="email">Email</string>
    <string name="failed_address_text">Failed to get user address.</string>
    <string name="title_plumber">Plumbing</string>
    <string name="title_electricican">Electrical work</string>
    <string name="title_house_keep">Housekeeping</string>
    <string name="title_painters">Painting</string>
    <string name="title_carpenters">Carpentry</string>
    <string name="title_appliance_repair">Appliance Repair</string>
    <string name="dialogTitle">Logout</string>
    <string name="dialogMessage">Do you wish to Logout?</string>
    <string name="select_city">Select City</string>
    <string name="manage_service">Manage Services</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_service">Manage Services</string>
    <string name="edit_service_title">Edit Services</string>
    <string name="service_details_title">Store Details</string>
    <string name="add_services">Add Services</string>
    <string name="service_image_id">Service ImageId</string>
    <string name="address_title">Address</string>
    <string name="choose_address">Choose Address</string>
    <string-array name="select_user_type">
        <item>------ Login As ------</item>
        <item>Consumer</item>
        <item>Service Provider</item>
    </string-array>
    <string name="select_type">Please select Type</string>
    <string name="select_consumer_type">ConsumerType</string>
    <string name="select_provider_type">ServiceProviderType</string>
    <string name="app_logo">Application logo</string>
    <string name="divider_line">connect with</string>
    <string name="action_search">Search</string>
    <string name="back_vector_path" translatable="false">M50 25,L80 50,M20 50,L80 50,M50 75,L80 50</string>
    <string name="menu_vector_path" translatable="false">M20 30,L80 30,M20 50,L80 50,M20 70,L80 70</string>
    <string name="no_data_found">not found based on your location</string>
    <string name="check_internet">Please check your internet connection..</string>
    <string name="txt_mobile_number">Phone No :</string>
    <string name="txt_email">Email Id :</string>
    <string name="txt_KM">KM</string>
    <string name="select_yes">Yes</string>
    <string name="logo_img">logo_img</string>
    <string name="next">Next</string>
    <string name="service_image">Service Image</string>
    <string name="phone_image">Phone Image</string>
    <string name="are_you_sure_want_to_delete">Are you sure want to delete</string>
    <string name="service">Service</string>
    <string name="msg_data_updated">Data updated successfully</string>
    <string name="msg_login_success">Logged in successful…</string>
    <string name="msg_login_cancelled">Login Cancelled..</string>
    <string name="msg_login_error">Login Error…</string>
    <string name="msg_data_saved_success">User data saved successfully</string>
    <string name="msg_data_failed">User data fetch failed</string>
    <string name="msg_unknown_error">Unknown exception</string>
    <string name="msg_user_addr_failed">The user address is null.</string>
    <string name="msg_failed_user_resolution">Failed the result had resolution.</string>
    <string name="msg_logout_cancelled">Cancelled Logout</string>
    <string name="msg_logout_success">Successfully logged out</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="nearby_search_title">Nearby Stores</string>
    <string name="service_provider_title">Service Providers</string>
    <string name="nearby_search_services_providers">Route to the store</string>
    <string name="title_current_location">Current Location</string>
    <string name="service_type_err_msg">Please select service type</string>
    <string name="select_country">Please select country</string>
    <string name="select_state">Please select state</string>
    <string name="choose_country">Select Country</string>
    <string name="choose_city">Select City</string>
    <string name="choose_state">Select State</string>
    <string name="choose_email_client_type">Choose an Email client :</string>
    <string name="consumer">Consumer</string>
    <string name="service_provider">Service Provider</string>
    <string name="no_services_available">Please add services to manage.</string>
    <string name="service_details">Service Provider Details</string>
    <string name="enter_valid_phone_num">Enter a valid phone number</string>
</resources>