<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_image">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_service"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title=""
        android:background="@color/toolbarcolor"
        tools:ignore="MissingClass,MissingConstraints">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_services"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title"
            android:textSize="@dimen/hiad_20_dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            tools:ignore="SpUsage" />
    </androidx.appcompat.widget.Toolbar>
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/selectServiceSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin_40"
        android:prompt="@string/select_service"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_add_service"
        android:layout_marginLeft="@dimen/hiad_16_dp"
        android:layout_marginRight="@dimen/hiad_16_dp"
        tools:ignore="MissingClass" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etServiceNameTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/hiad_16_dp"
        android:layout_marginRight="@dimen/hiad_16_dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectServiceSpinner">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etServiceName"
            android:layout_width="match_parent"
            android:hint="@string/enter_service_name"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPhoneNumTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etServiceNameTV"
        android:layout_marginLeft="@dimen/hiad_16_dp"
        android:layout_marginRight="@dimen/hiad_16_dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhoneNum"
            android:layout_width="match_parent"
            android:hint="@string/enter_phone_num"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="13"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmailTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhoneNumTV"
        android:layout_marginLeft="@dimen/hiad_16_dp"
        android:layout_marginRight="@dimen/hiad_16_dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailId"
            android:layout_width="match_parent"
            android:hint="@string/enter_email_id"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/selectCountrySpn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin_40"
        android:prompt="@string/user_country"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailTV"
        android:layout_marginLeft="@dimen/hiad_16_dp"
        android:layout_marginRight="@dimen/hiad_16_dp"
        tools:ignore="MissingClass" />
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/selectStateSpn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin_40"
        android:prompt="@string/user_country"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectCountrySpn"
        android:layout_marginLeft="@dimen/hiad_16_dp"
        android:layout_marginRight="@dimen/hiad_16_dp"
        tools:ignore="MissingClass" />
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/selectCitySpn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin_40"
        android:prompt="@string/select_city"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectStateSpn"
        android:layout_marginLeft="@dimen/hiad_16_dp"
        android:layout_marginRight="@dimen/hiad_16_dp"
        tools:ignore="MissingClass" />
    <Button
        android:id="@+id/loginSericeProviderBtn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="@dimen/activity_horizontal_margin_40"
        android:text="@string/btn_add_services"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:background="@drawable/rounded_corner_gray_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/hiad_16_dp"
        android:layout_marginRight="@dimen/hiad_16_dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
