<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".java.activities.SplashActivity"
    android:background="@drawable/ic_bg_image">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/ic_logo_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051"
        android:contentDescription="@string/logo_img" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_splash_welcome"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
    <Spinner
        android:id="@+id/spnLogin"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="329dp"
        android:layout_height="49dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="25dp"
        android:background="#FFFFFF"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/spnCountry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    <Spinner
        android:id="@+id/spnCountry"
        android:layout_width="325dp"
        android:layout_height="49dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnnext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnLogin"
        android:visibility="gone"/>
    <Button
        android:id="@+id/btnnext"
        android:layout_width="116dp"
        android:layout_height="51dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="8dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnCountry"
        android:background="@drawable/button_bg"/>
</androidx.constraintlayout.widget.ConstraintLayout>